--- a/NCache/NCache.csproj
+++ b/NCache/NCache.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
     <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="CSRedisCore" Version="3.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
