--- a/NCache/NCache.csproj
+++ b/NCache/NCache.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>softlgl</Authors>
     <Copyright>softlgl</Copyright>
     <Owners>softlgl</Owners>
@@ -13,19 +13,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Class1.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="AspectCore.Core" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
-    <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.0.0" />
-    <PackageReference Include="CSRedisCore" Version="3.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.2" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+	<PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.2.0" />
+	<PackageReference Include="CSRedisCore" Version="3.8.669" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
+    <PackageReference Include="System.Text.Json" Version="6.0.6" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
     <Folder Include="Option\" />
     <Folder Include="Repository\" />
-    <Folder Include="Utils\" />
   </ItemGroup>
 </Project>
