--- a/NCache.Redis/NCache.Redis.csproj
+++ b/NCache.Redis/NCache.Redis.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
+	<Title>NCache.Redis</Title>
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CSRedisCore" Version="3.8.669" />
+		<PackageReference Include="CSRedisCore" Version="3.8.670" />
 	</ItemGroup>
 
 	<ItemGroup>
